buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'

version = '0.0.5'
group = 'me.suff.regeneration'
archivesBaseName = '[1.13.2] Regeneration'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.

minecraft {
    mappings channel: 'snapshot', version: '20180921-1.13'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                regeneration {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                regeneration {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main {
    java {
        srcDirs = ['src/main/java', 'src/debugger/java']
    }

    resources {
        srcDirs = ['src/main/resources', 'src/debugger/resources']
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.13.2-25.0.191'
    compile 'org.jsoup:jsoup:1.11.3'
}

jar {
    manifest {
        attributes([
            "Specification-Title": "regeneration",
            "Specification-Vendor": "regeneration-suff",
            "Specification-Version": "4", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor" :"regeneration-suff",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
    manifest.attributes ContainedDeps: "jsoup-1.11.3.jar"
}



